--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           command: |
             pip install -U pip
             pip -V
-            pip install -U .
+            pip install -U .[tests]
             pip install coverage coveralls
 
       - run:
