deps: bump multiformats up to multiformats>=0.3.1.post4 to fix breakage
https://app.circleci.com/pipelines/github/snarfed/dag-json/14/workflows/8005d479-aea1-4c48-b487-87728edc27fb/jobs/14

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ readme = 'README.md'
 requires-python = '>=3.7'
 keywords = ['DAG-JSON', 'IPLD', 'codec', 'CID']
 dependencies = [
-    'multiformats>=0.2.0',
+    'multiformats>=0.3.1.post4',
 ]
 classifiers = [
     'Programming Language :: Python :: 3',
